添加Bean实例化策略InstantiationStrategy 实现了三种实例化策略